import global css for tailwind

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
-<!doctype html>
+---
+import "../styles/global.css";
+---
+
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -6,7 +9,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>C&C Electric</title>
 	</head>
 	<body>
 		<slot />
