--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Nav from '../components/Nav.tsx';
+import Services from '../components/Services.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -10,4 +11,5 @@ import Nav from '../components/Nav.tsx';
 <Layout>
   <Nav client:load />
 	<Hero />
+  <Services />
 </Layout>
