--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import "../styles/global.css";
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -15,12 +14,11 @@ import "../styles/global.css";
 		<slot />
 	</body>
 </html>
-
 <style>
 	html,
 	body {
 		margin: 0;
 		width: 100%;
-		height: 100%;
+		min-height: 100%;
 	}
 </style>
