--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Nav from '../components/Nav.tsx';
 import Services from '../components/Services.astro';
+import Portfolio from '../components/Portfolio.tsx';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -12,4 +13,5 @@ import Services from '../components/Services.astro';
   <Nav client:load />
 	<Hero />
   <Services />
+  <Portfolio client:load />
 </Layout>
