--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Services from '../components/Services.astro';
 import Portfolio from '../components/Portfolio.tsx';
 import Testimonials from '../components/Testimonials.astro'
 import About from '../components/About.astro';
+import Contact from '../components/Contact.tsx';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -18,4 +19,5 @@ import About from '../components/About.astro';
   <Portfolio client:load />
   <Testimonials />
   <About />
+  <Contact client:load />
 </Layout>
