fixed breakpoint issues

--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -58,7 +58,7 @@ const testimonials = [
       </div>
 
       {/* Testimonial Cards */}
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-8">
         {testimonials.map((testimonial, index) => (
           <div
             class="reveal group relative"
